--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,19 @@ Copyright Notice
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PRISME</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-<%= yield %>
-
+<body class="<%= controller_name %> <%= action_name %>">
+<header>
+  <%= render 'layouts/navigation' %>
+</header>
+<main role="main" class="container-fluid">
+  <%= render 'layouts/messages' %>
+  <%= yield %>
+</main>
 </body>
 </html>
