Adding in some time calculators

--- a/app/views/prisme_job_queue/list.html.erb
+++ b/app/views/prisme_job_queue/list.html.erb
@@ -29,7 +29,7 @@
     <td>Status</td>
     <td>Enqueued At</td>
     <td>Scheduled At</td>
-    <!--<td>Elapsed Time</td>-->
+    <td>Elapsed Time</td>
     <td>User</td>
     <td>Last Error</td>
     <td>Result</td>
@@ -66,7 +66,7 @@
       $('#' + tableId + ' tbody').html(rows);
     }
 
-    var fields = ['job_id', 'job_name', 'status', 'enqueued_at', 'scheduled_at', 'user', 'last_error', 'result'];
+    var fields = ['job_id', 'job_name', 'status', 'enqueued_at', 'scheduled_at','elapsed_time', 'user', 'last_error', 'result'];
 
     $('#btn-test').click(function (e) {
     });
