--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require jquery.smartWizard/smart_wizard
  *= require jquery.steps-1.1.0/jquery.steps
+ *= require ag-grid
  *= require_tree .
  *= require_self
  */
