--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -1,31 +1,92 @@
-<%= form_tag(app_deployer_deploy_app_path, :id => 'app_deployer') do %>
-    <%= field_set_tag 'Available Applications' do %>
-        <%= radio_button_tag 'application', 'KOMET', true %>
-        <%= label_tag 'application_KOMET', 'KOMET Tooling' %>
-        <br>
-        <%= radio_button_tag 'application', 'ISAAC' %>
-        <%= label_tag 'application_ISAAC', 'ISAAC' %>
+<h1>Application Deployer</h1>
+<%= form_tag(app_deployer_deploy_app_path, :id => 'app_deployer_form') do |f| %>
+    <h3>Application Type</h3>
+    <%= field_set_tag 'Select the Application Type' do %>
+        <%= label_tag 'application_KOMET', class: 'radio-inline' do %>
+            <%= radio_button_tag 'application', 'KOMET', true %>KOMET Tooling
+        <% end %>
+        <br/>
+        <%= label_tag 'application_ISAAC', class: 'radio-inline' do %>
+            <%= radio_button_tag 'application', 'ISAAC' %>ISAAC
+        <% end %>
     <% end %>
-    <br><br>
-    <%= field_set_tag 'Available KOMET Wars' do %>
-        <%= label_tag 'komet_wars', 'KOMET wars' %><br>
-        <%= select_tag 'komet_war', options_from_collection_for_select(@komet_wars, 'select_key', 'select_value'), {:prompt => '-- Select a war to deploy --'}%>
+
+    <h3>WAR File to Deploy</h3>
+    <%= field_set_tag 'Select the WAR file to deploy to Tomcat' do %>
+        <%= label_tag 'komet_wars', 'KOMET Tooling', id: 'war_label' %><br>
+        <%= select_tag 'komet_war', options_from_collection_for_select(@komet_wars, 'select_key', 'select_value'), {:prompt => '-- Select a war to deploy --', :required => true} %>
     <% end %>
-    <br>
-    <br>
-    <%= submit_tag 'Submit Deployment' %>
+
+    <h3>Select the Tomcat Server for Deployment</h3>
+    <%= field_set_tag 'Select Tomcat Server' do %>
+        <%= label_tag 'tomcat_server', 'Tomcat Server URL' %><br>
+        <%= select_tag 'tomcat_server', options_from_collection_for_select(@tomcat_servers, 'select_key', 'select_value'), {:prompt => '-- Select the Tomcat Server --'} %>
+    <% end %>
+
+    <h3>Submit Deployment Request</h3>
+    <%= field_set_tag 'Application Deployment Summary' do %>
+        <p>Please review the deployment summary and click the 'Finish' button to deploy the selected application.</p>
+    <% end %>
 <% end %>
 
 <script>
   $(document).ready(function () {
-    /*
-
-     $('#app_deployer').steps({
-     headerTag: "h3",
-     bodyTag: "section",
-     transitionEffect: "slideLeft",
-     autoFocus: true
-     });
-     */
+    var form = $('#app_deployer_form');
+    form.show();
+    form.steps({
+      headerTag: "h3",
+      bodyTag: "fieldset",
+      transitionEffect: "slideLeft",
+      onStepChanging: function (event, currentIndex, newIndex) {
+        // Always allow previous action even if the current form is not valid!
+        if (currentIndex > newIndex) {
+          return true;
+        }
+        // Forbid next action on "Warning" step if the user is to young
+        /*
+         if (newIndex === 1 && Number($("#age-2").val()) < 18) {
+         return false;
+         }
+         */
+        /*
+         // Needed in some cases if the user went back (clean up)
+         if (currentIndex < newIndex) {
+         // To remove error styles
+         form.find(".body:eq(" + newIndex + ") label.error").remove();
+         form.find(".body:eq(" + newIndex + ") .error").removeClass("error");
+         }
+         form.validate().settings.ignore = ":disabled,:hidden";
+         */
+        return form.valid();
+      },
+      onStepChanged: function (event, currentIndex, priorIndex) {
+        /*
+         // Used to skip the "Warning" step if the user is old enough.
+         if (currentIndex === 2 && Number($("#age-2").val()) >= 18) {
+         form.steps("next");
+         }
+         // Used to skip the "Warning" step if the user is old enough and wants to the previous step.
+         if (currentIndex === 2 && priorIndex === 3) {
+         form.steps("previous");
+         }
+         */
+      },
+      onFinishing: function (event, currentIndex) {
+        form.validate().settings.ignore = ":disabled";
+        return form.valid();
+      },
+      onFinished: function (event, currentIndex) {
+        alert("Submitted!");
+      }
+    }).validate({
+      errorPlacement: function errorPlacement(error, element) {
+        element.before(error);
+      },
+      rules: {
+        confirm: {
+          equalTo: "#password-2"
+        }
+      }
+    });
   });
 </script>
