--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,6 +9,17 @@
       <li><a href="<%= app_deployer_path%>" onclick="checkPolling('deployer');">App Deployer</a></li>
       <li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>
       <li><a href="<%= prisme_job_queue_list_path%>" onclick="checkPolling('job_queue');">Job Queue Listing</a></li>
+
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="<%= services_path%>">Service Provisioning</a></li>
+          <li role="separator" class="divider"></li>
+          <li class="dropdown-header">Nav header</li>
+          <li><a href="#">Separated link</a></li>
+          <li><a href="#">One more separated link</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </nav>
