--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Service</h1>
 
-<%= render 'form' %>
+<%= render 'form', mode: 'edit' %>
 
 <%= link_to 'Show', @service %> |
 <%= link_to 'Back', services_path %>
