--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Service</h1>
 
 <%= render 'form', mode: 'edit' %>
-
-<%= link_to 'Show', @service %> |
-<%= link_to 'Back', services_path %>
+<br>
+<br>
+<%= link_to 'Show', @service, class: 'btn btn-primary' %>
+<%= link_to 'Back', services_path, class: 'btn btn-primary' %>
