--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,31 +1,48 @@
 <p id="notice"><%= notice %></p>
-
+<style>
+  table {
+    border-width: thin;
+    border: solid;
+  }
+  th {
+    text-align: center;
+    background-color: cornsilk;
+    color: navy;
+    border: solid;
+    border-width: thin;
+    padding: 5px;
+  }
+    td {
+      padding: 2px;
+    }
+</style>
 <h1>Listing Services</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Service Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @services.each do |service| %>
+<%= field_set_tag 'Provisioned Services' do %>
+    <table width="1000px" class="table table-striped">
+      <thead>
       <tr>
-        <td><%= service.name %></td>
-        <td><%= service.description %></td>
-        <td><%= service.service_type %></td>
-        <td><%= link_to 'Show', service %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th width="35%">Name</th>
+        <th width="35%">Description</th>
+        <th width="30%">Service Type</th>
+        <th colspan="3">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
+      <tbody>
+      <% @services.each do |service| %>
+          <tr>
+            <td><%= service.name %></td>
+            <td><%= service.description %></td>
+            <td><%= service.service_type %></td>
+            <td><%= link_to 'Show', service, class: 'btn btn-primary' %></td>
+            <td><%= link_to 'Edit', edit_service_path(service), class: 'btn btn-primary' %></td>
+            <td><%= link_to 'Destroy', service, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+<% end %>
+<br>
 <br>
 
-<%= link_to 'New Service', new_service_path %>
+<%= link_to 'New Service', new_service_path, class: 'btn btn-primary' %>
