--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Service</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', services_path %>
+<%= render 'form', mode: 'new' %>
+<br>
+<br>
+<%= link_to 'Back', services_path, class: 'btn btn-primary' %>
