--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,19 +1,30 @@
-<p id="notice"><%= notice %></p>
+<h1>Show Service</h1>
+<p id="notice"><%#= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Name:</strong><br>
   <%= @service.name %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Description:</strong><br>
   <%= @service.description %>
 </p>
 
 <p>
-  <strong>Service Type:</strong>
+  <strong>Service Type:</strong><br>
   <%= @service.service_type %>
 </p>
-
-<%= link_to 'Edit', edit_service_path(@service) %> |
-<%= link_to 'Back', services_path %>
+<br>
+<%= field_set_tag (@service.description + ' Properties') do %>
+    <% @service.service_properties.ordered_props.each do |prop| %>
+        <p>
+          <strong><%= get_label(@service.service_type, prop.key) + ':' %></strong><br>
+          <%= prop.value %>
+        </p>
+    <% end %>
+<% end %>
+<br>
+<br>
+<%= link_to 'Edit', edit_service_path(@service), class: 'btn btn-primary' %>
+<%= link_to 'Back', services_path, class: 'btn btn-primary' %>
