--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="<%= services_path%>">Service Provisioning</a></li>
+          <li><a href="<%= services_path%>"  onclick="checkPolling('services');">Service Provisioning</a></li>
           <li role="separator" class="divider"></li>
           <li class="dropdown-header">Nav header</li>
           <li><a href="#">Separated link</a></li>
