--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -1,3 +1,9 @@
+<!--
+this style is for the more complex validation check
+<style>
+  span.error{color:red;}
+</style>
+-->
 <h1>Application Deployer</h1>
 <%= form_tag(app_deployer_deploy_app_path, :id => 'app_deployer_form') do |f| %>
     <h3>Application Type</h3>
@@ -13,7 +19,7 @@
 
     <h3>WAR File to Deploy</h3>
     <%= field_set_tag 'Select the WAR file to deploy to Tomcat' do %>
-        <%= label_tag 'komet_wars', 'KOMET Tooling', id: 'war_label' %><br>
+        <%= label_tag 'komet_war', 'KOMET Tooling', id: 'war_label' %><br>
         <%= select_tag 'komet_war', options_from_collection_for_select(@komet_wars, 'select_key', 'select_value'), {:prompt => '-- Select a war to deploy --', :required => true} %>
     <% end %>
 
@@ -79,14 +85,30 @@
         form.submit();
       }
     }).validate({
-      errorPlacement: function errorPlacement(error, element) {
-        element.before(error);
+/*      errorPlacement: function(error, element) {
+        // Append error within linked label
+        $( element )
+            .closest( "form" )
+            .find( "label[for='" + element.attr( "id" ) + "']" )
+            .append( error );
       },
+      errorElement: "span",
+      messages: {
+        komet_wars: {
+          required: " (required)",
+          minlength: " (must be at least 3 characters)"
+        }
+      }*/
+      errorPlacement: function errorPlacement(error, element) {
+        element.after(error);
+      }
+/*
       rules: {
         confirm: {
           equalTo: "#password-2"
         }
       }
+*/
     });
   });
 </script>
