--- a/app/views/services/_render_props.html.erb
+++ b/app/views/services/_render_props.html.erb
@@ -1,6 +1,6 @@
 <%= field_set_tag $SERVICE_TYPES[@service_type]['description'] do %>
     <% $SERVICE_TYPES[@service_type]['props'].each do |p| %>
         <%= label_tag p['key'], p['label'] %><br>
-        <%= prop_input(p) %><br><br>
+        <%= text_field 'props[' + p['key']+']', nil, get_input_type(@service_type, p['key']) %><br><br>
     <% end %>
 <% end %>
