--- a/config/props/log.properties.erb
+++ b/config/props/log.properties.erb
@@ -22,7 +22,7 @@ caller_tracing = true
        #the presence of this will cause stdout logging to occur.
        env_hash[:append_stdout] = 'yes'
      when :test
-       env_hash[:level] = 'DEBUG'
+       env_hash[:level] = 'INFO'
        env_hash[:age] = 'daily'
        env_hash[:keep] = 7
      else #production
