--- a/app/views/application/_bulleted_flash_single_header.html.erb
+++ b/app/views/application/_bulleted_flash_single_header.html.erb
@@ -1,4 +1,5 @@
-<!--this partial takes either an array of strings with the first element being the title (header) for the flash
+<!--
+this partial takes either an array of strings with the first element being the title (header) for the flash
 or an array of size 2 with the first element being a string for the title with the second element being an array
 of strings representing the validation errors
 -->
