--- a/app/views/services/_render_props.html.erb
+++ b/app/views/services/_render_props.html.erb
@@ -1,6 +1,8 @@
+<% param_props = params[PrismeService::TYPE_PROPS] %><br>
+
 <%= field_set_tag $SERVICE_TYPES[@service_type]['description'] do %>
     <% $SERVICE_TYPES[@service_type]['props'].each do |p| %>
         <%= label_tag p['key'], p['label'] %><br>
-        <%= text_field 'props[' + p['key']+']', nil, get_input_type(@service_type, p['key']) %><br><br>
+        <%= text_field_tag 'props[' + p['key']+']', (param_props.nil? ? nil : param_props[p['key']]), get_input_type(@service_type, p['key']) %><br><br>
     <% end %>
 <% end %>
