--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -4,4 +4,4 @@
 <br>
 <br>
 <%= link_to 'Show', @service, class: 'btn btn-primary' %>
-<%= link_to 'Back', services_path, class: 'btn btn-primary' %>
+<%= link_to 'List', services_path, class: 'btn btn-primary' %>
