--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -28,4 +28,4 @@
 <br>
 <br>
 <%= link_to 'Edit', edit_service_path(@service), class: 'btn btn-primary' %>
-<%= link_to 'Back', services_path, class: 'btn btn-primary' %>
+<%= link_to 'List', services_path, class: 'btn btn-primary' %>
