Wiring up authentication.  The following urls now work:
http://localhost:3000/users/sign_in
http://localhost:3000/users/sign_out
http://localhost:3000/users/sign_up

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,7 +56,7 @@
     poll();
 
     //register for polling
-    var pollster = setInterval(poll, 5000);
-    register_polling('welcome', pollster);
+    //var pollster = setInterval(poll, 5000);
+    //register_polling('welcome', pollster);
   });
 </script>
