--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -51,7 +51,7 @@
       <% end %>
     </div>
     <div class="actions" id="submit_div">
-      <%= f.submit %>
+      <%= f.submit class: 'btn btn-primary' %>
     </div>
 <% end %>
 <script>
