--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -9,8 +9,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
+    <%= f.submit 'Resend unlock instructions', class: 'btn btn-primary' %>
   </div>
 <% end %>
-
-<%= render "users/shared/links" %>
+<%= render 'users/shared/links' %>
