--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,61 +1,29 @@
-<h1>PRISME - Job Queue</h1>
-<button id="btn-update">Update List -- remove me!</button><br><br>
-<div id="queue_list_div" style="height: 100%;" class="ag-fresh"></div>
+<!--tabs-->
+<!--{"http://vadev.mantech.com:4848/manager"=>{"isaac-rest"=>{:context=>"/isaac-rest", :state=>"running", :session_count=>"0"}, "ROOT"=>{:context=>"/", :state=>"running", :session_count=>"0"}, "rails_komet-1.3-a"=>{:context=>"/rails_komet-1.3-a", :state=>"running", :session_count=>"0"}, "rails_komet-1.3-b"=>{:context=>"/rails_komet-1.3-b", :state=>"stopped", :session_count=>"0"}, "rails_komet_a"=>{:context=>"/rails_komet_a", :state=>"running", :session_count=>"0"}, "/usr/share/tomcat7-admin/host-manager"=>{:context=>"/host-manager", :state=>"running", :session_count=>"0"}, "cargo_deploy"=>{:context=>"/cargo_deploy", :state=>"running", :session_count=>"0"}, "isaac-rest-1.0.1"=>{:context=>"/isaac-rest-1.0.1", :state=>"running", :session_count=>"0"}, "/usr/share/tomcat7-admin/manager"=>{:context=>"/manager", :state=>"running", :session_count=>"0"}, "isaac-rest-1.0"=>{:context=>"/isaac-rest-1.0", :state=>"running", :session_count=>"0"}}, "http://localhost:8080/manager"=>{:failed=>"Connection refused - Connection refused"}}-->
+<div id="tabs">
+  <ul>
+    <li><a href='#tp-deployments'>Deployments</a></li>
+    <li><a href='#tp-job_queue'>Job Queue</a></li>
+  </ul>
+  <div id="tp-deployments">
+    <%= render partial: 'deployments' %>
+
+  </div>
+  <div id="tp-job_queue">
+    <%= render partial: 'job_queue' %>
+  </div>
+</div>
 
 <script>
-  var columnDefs = [
-    {headerName: "Job ID", field: "job_id", width: 150},
-    {headerName: "Job Name", field: "job_name", width: 150},
-    {headerName: "Status", field: "status", width: 60},
-    {headerName: "Scheduled At", field: "scheduled_at", width: 90},
-    {headerName: "Enqueued At", field: "enqueued_at", width: 90},
-    {headerName: "Started At", field: "started_at", width: 90},
-    {headerName: "Completed At", field: "completed_at", width: 90},
-    {headerName: "Elapsed Time", field: "elapsed_time", width: 90},
-    {headerName: "User", field: "user", width: 110},
-    {headerName: "Last Error", field: "last_error", width: 100},
-    {headerName: "Result", field: "result", width: 100}
-  ];
-
-  var gridOptions = {
-    columnDefs: columnDefs,
-    rowData: null
-  };
-
-  $('#btn-update').click(function (e) {
-    $.ajax({
-      url: '/prisme_job_queue/reload_job_queue_list',
-      type: 'GET',
-      data: {add_test_job: true},
-      dataType: "json",
-      success: function (data) {
-        gridOptions.api.setRowData(data);
-      }
-    })
-  });
-
-  function stop_polling(interval) {
-    console.log("stopping polling ");
-    if (arguments[1] === undefined) {
-      clearInterval(interval);
-    }
-  }
-
-  function poll() {
-    console.log('calling poll');
-    //load data via ajax
-    $.getJSON('/prisme_job_queue/reload_job_queue_list', {}, function (data) {
-      gridOptions.api.setRowData(data);
-    });
-  }
-
   // setup the grid after the page has finished loading
   $(document).ready(function () {
+    $("#tabs").tabs();
+
     var gridDiv = document.querySelector("#queue_list_div");
     new agGrid.Grid(gridDiv, gridOptions);
     poll();
 
     //register for polling
-    polling.registerController('welcome', poll, 5000);
+//    polling.registerController('welcome', poll, 5000);
   });
 </script>
