changed tr:hover to pointer

--- a/app/views/welcome/_deployments.html.erb
+++ b/app/views/welcome/_deployments.html.erb
@@ -9,6 +9,10 @@
     width: 100%;
   }
 
+  tr:hover {
+    cursor: pointer
+  }
+
   .data-table thead td {
     background-color: #8CCCF1;
     font-weight: bold;
