--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -4,7 +4,7 @@
       $('#submit_div').hide();
       $('#service_props').empty();
     } else {
-      $.get('<%=services_render_props_path%>', {service_type: service_type}, function (data) {
+      $.get('<%= services_render_props_path %>', {service_type: service_type}, function (data) {
         $('#service_props').html(data);
       });
 
@@ -13,32 +13,38 @@
   }
 </script>
 <% # modes
-  is_new = 'new'.eql?(mode)
-  is_edit = 'edit'.eql?(mode)
-  is_failure = 'failure'.eql?(mode)
+   is_new = 'new'.eql?(mode)
+   is_edit = 'edit'.eql?(mode)
+   is_failure = 'failure'.eql?(mode)
 %>
 
 <%= form_for(@service) do |f| %>
-    <div class="field">
-      <%= f.label :name %><br>
-      <%= f.text_field :name, required: true, title: "Please enter a service name" %>
-    </div>
-    <div class="field">
-      <%= f.label :description %><br>
-      <%= f.text_area :description, required: true %>
-    </div>
-    <div class="field">
-      <%= f.label :service_type %><br>
-      <% if (is_edit) %>
-          <%= f.text_field :service_type, {readonly: true} %>
-      <% else %>
-          <%= f.select :service_type, options_for_select([['-- Pick a service type --', ''], fetch_types], @service.service_type), {}, {onchange: 'serviceTypeChange(this.value)'} %>
+    <div class="field" id="service">
+      <%= field_set_tag (@service.id.nil? ? 'New Service' : @service.name) do %>
+          <div>
+            <%= f.label :name %><br>
+            <%= f.text_field :name, required: true, title: 'Please enter a service name', maxlength: 255, size: 75 %>
+          </div>
+          <br>
+          <div>
+            <%= f.label :description %><br>
+            <%= f.text_area :description, required: true, rows: 3, cols: 75 %>
+          </div>
+          <br>
+          <div>
+            <%= f.label :service_type %><br>
+            <% if (is_edit) %>
+                <%= f.text_field :service_type, {readonly: true} %>
+            <% else %>
+                <%= f.select :service_type, options_for_select([['-- Pick a service type --', ''], fetch_types], @service.service_type), {}, {onchange: 'serviceTypeChange(this.value)'} %>
+            <% end %>
+          </div>
       <% end %>
     </div>
     <br><br>
     <div class="field" id="service_props">
       <% if (is_edit) %>
-          <%= field_set_tag (@service.description + ' Properties') do %>
+          <%= field_set_tag (@service.name + ' - Properties') do %>
               <%= f.fields_for :service_properties, @service.service_properties.ordered_props do |ff| %>
                   <div>
                     <%= ff.label :value, get_label(@service.service_type, ff.object.key) %><br>
@@ -47,7 +53,7 @@
               <% end %>
           <% end %>
       <% elsif is_failure %>
-        <%= render partial: services_render_props_path %>
+          <%= render partial: services_render_props_path %>
       <% end %>
     </div>
     <div class="actions" id="submit_div">
@@ -57,7 +63,7 @@
 <script>
   $(document).ready(function () {
     <% if (is_new) %>
-      $('#submit_div').hide();
+    $('#submit_div').hide();
     <% end %>
   });
 </script>
