Jenkins Build job... Next Jenkins check build job, then figuring out a way to use active record to report on the status.

--- a/config/service/jenkins_job_config.xml.erb
+++ b/config/service/jenkins_job_config.xml.erb
@@ -39,7 +39,7 @@
     <configVersion>2</configVersion>
     <userRemoteConfigs>
       <hudson.plugins.git.UserRemoteConfig>
-        <url><%= git_url %></url><!-- todo example: https://github.com/VA-CTT/ISAAC-term-convert-loinc.git-->
+        <url><%= git_url %></url><!--example: https://github.com/VA-CTT/ISAAC-term-convert-loinc.git-->
       </hudson.plugins.git.UserRemoteConfig>
     </userRemoteConfigs>
     <branches>
