It should work now.  Now we can render our static html which preserves layouts.  Final testing in the AM.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,17 +14,7 @@
       <li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>
       <li><a href="<%= prisme_job_queue_list_path %>" onclick="polling.checkPolling('job_queue');">Job Queue Listing</a></li>
       <% if policy(:navigation).admin? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration
-              <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="<%= services_path %>" onclick="polling.checkPolling('services');">Service Provisioning</a></li>
-              <li role="separator" class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
+          <li><a href="<%= services_path %>" onclick="polling.checkPolling('deployer');">Service Provisioning</a></li>
       <% end %>
 
       <li>
