--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,15 +15,35 @@
 </div>
 
 <script>
+  var myDataSource = {
+    allOfTheData: null,
+    pageSize: 15,
+    getRows: function(params) {
+      console.log('asking for ' + params.startRow + ' to ' + params.endRow);
+      //setTimeout( function() {
+        // take a chunk of the array, matching the start and finish times
+        var rowsThisPage = myDataSource.allOfTheData.slice(params.startRow, params.endRow);
+        // see if we have come to the last page. if we have, set lastRow to
+        // the very last row of the last page. if you are getting data from
+        // a server, lastRow could be returned separately if the lastRow
+        // is not in the current page.
+        var lastRow = -1;
+        if (myDataSource.allOfTheData.length <= params.endRow) {
+          lastRow = myDataSource.allOfTheData.length;
+        }
+        params.successCallback(rowsThisPage, lastRow);
+      //}, 0);
+    },
+  };
   // setup the grid after the page has finished loading
   $(document).ready(function () {
     $("#tabs").tabs();
 
     var gridDiv = document.querySelector("#queue_list_div");
-    new agGrid.Grid(gridDiv, gridOptions);
-    poll();
+    var mainGrid =  new agGrid.Grid(div, gridOptions);
+    poll(gridDiv);
 
     //register for polling
-//    polling.registerController('welcome', poll, 5000);
+    polling.registerController('welcome', poll, 5000);
   });
 </script>
